prusti/tests/verify/ui/non-pure-function.stderr
error: Use of impure function "get_true" in assertion
  --> $DIR/non-pure-function.rs:14:13
   |
14 | #[requires="get_true() && !foo::get_false()"]
   |             ^^^^^^^^^^

error: Use of impure function "foo::get_false" in assertion
  --> $DIR/non-pure-function.rs:14:28
   |
14 | #[requires="get_true() && !foo::get_false()"]
   |                            ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

